# longbow

./: .bumpversion.cfg  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  DEVELOP.md  MANIFEST.in  README.md  README.rst  dev-requirements.txt  initialize.sh  longbow.conda_env.yml  pip_deploy.sh  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  tox.ini
.github/workflows/: cd.yml  ci_push.yml
docker/: Dockerfile  Makefile
docs/: _config.yml  annotate.md  commands.md  custom_models.md  faq.md  how.md  index.md  inspect.md  installation.md  quick_start.md  scsplit.md
docs/commands/: annotate.md  convert.md  correct.md  correct_umi.md  demultiplex.md  extract.md  filter.md  inspect.md  model.md  models.md  pad.md  peek.md  scsplit.md  segment.md  sift.md  stats.md  tagfix.md  train.md  version.md
docs/figures/: longbow1.graffle  models.graffle
resources/barcodes/cellranger/: README.md
resources/sirv/: SIRV_Set_4.no_poly_a.fasta.fai
src/PROJECT_NAME/: __main__.py  log.py
src/annmas/: __main__.py  log.py  meta.py
src/longbow/: __main__.py  meta.py
tests/: utils.py
tests/integration/: test_annotate.py  test_convert.py  test_correct.py  test_correct_umi.py  test_demultiplex.py  test_extract.py  test_filter.py  test_pad.py  test_peek.py  test_segment.py  test_sift.py  test_tagfix.py
tests/test_data/: Makefile  mas10_test_input.bam  mas10_test_input.bam.pbi  mas10_test_input.read_names.txt  mas15_test_input.bam  mas15_test_input.bam.pbi  mas15_test_input.read_names.txt  mas_15_bulk_10x5p_single_internal.bam  test_input.bam  test_input.read_names.txt
tests/unit/: conftest.py  test_bam_utils.py  test_model.py  test_placeholder.py
wdl/: MasSeqSingleFlowcell.wdl  README.md
(+148 files in other folders)
